# stat-ml

./: README.md  pyproject.toml
src/stat_ml/: naive_bayes.py  pca.py
